fixed spacing and added profile image

--- a/Bootstrap/css/responsive.css
+++ b/Bootstrap/css/responsive.css
@@ -1,3 +1,52 @@
+.project{
+	width: 100%;
+}
+
+imageDiv{
+	margin: 10%;
+	/* width: 30px;
+	height: 30px; */
+}
+
+#cecily{
+	width: 100%;
+	height: 100%;
+}
+
+.social{
+	margin: 0 auto;
+	padding: 5%;
+  }
+  
+  .fa{
+	border-radius: 50%;
+	padding: 12px;
+	font-size: 24px;
+	width: -6px;
+	text-align: center;
+	text-decoration: none;
+  }
+  .fa-facebook {
+	background: #3B5998;
+	color: white;
+  }
+  
+  .fa-github {
+	background: black;
+	color: white;
+  }
+  
+  .fa-google {
+	background: #dd4b39;
+	color: white;
+  }
+  
+  .fa-linkedin {
+	background: #007bb5;
+	color: white;
+  }
+
+
 @media screen and (max-width: 1024px) {
 #header .header-content {
 	width: 90%;
